clarify purpose (human in the loop)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tuicr - Terminal UI for Code Review</title>
+    <title>tuicr - TUI for Code Reviews</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
         * {
@@ -222,19 +222,19 @@
     <div class="container">
         <header class="hero">
             <h1>tuicr</h1>
-            <p class="subtitle"><strong><u>T</u>erminal <u>UI</u> for <u>C</u>ode <u>R</u>eview.</strong> Review AI-generated diffs like a GitHub PR, right in your terminal.</p>
+            <p class="subtitle"><strong>Terminal UI for Code Review.</strong> A human-in-the-loop code review tool for AI-generated changes.</p>
         </header>
 
         <section class="features">
             <ul>
-                <li>Vim keybindings</li>
-                <li>Line & file comments</li>
-                <li>Export feedback for AI</li>
+                <li>You review, AI writes</li>
+                <li>Comment on any line or file</li>
+                <li>Export feedback for your AI agent</li>
             </ul>
         </section>
 
         <div class="demo">
-            <img src="demo.gif" alt="tuicr demo showing code review in terminal">
+            <img src="demo.gif" alt="tuicr demo showing a human reviewing AI-generated code changes">
         </div>
 
         <section class="install">
